# scikit-utils

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
data/: enable_all_supervised_outputs.yml  example_fit_classifier.yml  example_nested_pipeline.yml
src/skutils/: fit_supervised_model.py  git.py  import_utils.py  logging_utils.py  persistance.py  pipeline.py  plot.py  prediction.py  roc.py  scripting.py  user_input.py
src/skutils/data/: __init__.py  fit_supervised_model.yml  run_fit_supervised_model.yml
src/skutils/train_test_iterators/: __init__.py  _split.py  _types.py  train_on_all_wrapper.py  train_test_split.py
tests/: README.md  test_fit_supervised_model.py  test_persistence.py  test_pipeline.py  test_train_test_iterators.py
