[project]
name = 'scikit-utils'
description = 'Utilities for scikit-learn'
dynamic = ["version"]

################################################################################
[tool.setuptools.dynamic]
version = {attr = "skutils.__version__"}

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.isort]
import_heading_stdlib = "Standard library"
import_heading_thirdparty = "3rd party"
import_heading_firstparty = "1st party"
import_heading_localfolder = "Local"
force_sort_within_sections = true
multi_line_output = 3 # Vertical Hanging Indent

[tool.pylint.main]
recursive = true
[tool.pylint."MESSAGES CONTROL"]
ignore = [".venv", ".tox", "docs"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
]
[tool.pylint.design]
max-args = 10