[project]
name = 'scikit-utils'
description = 'Utilities for scikit-learn'
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn",
    "shapely",  # Used in roc.py
    "pyarrow",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "tox",
    # REPL
    "ipykernel",
    # Debugging
    "ipdb",
    # Code quality
    "flake8",     # Linter
    "pylint",     # Linter
    "isort",      # Import order checker
    "radon",      # Complexity checker
    "coverage",   # Coverage checker
    "pytest-cov", # Coverage checker plugin for pytest
    # Centralized Version Control
    "pre-commit",
]

[project.scripts]
skutils = "skutils.bin.run_skutils:main"

################################################################################
[tool.setuptools.dynamic]
version = {attr = "skutils.__version__"}

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore bin"
filterwarnings = [
    'ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:dateutil'
]

[tool.isort]
import_heading_stdlib = "Standard library"
import_heading_thirdparty = "3rd party"
import_heading_firstparty = "1st party"
import_heading_localfolder = "Local"
force_sort_within_sections = true
multi_line_output = 3 # Vertical Hanging Indent

[tool.pylint.main]
recursive = true
[tool.pylint.basic]
good-names=["i", "j", "k", "ex", "Run", "_", "X"]
[tool.pylint."MESSAGES CONTROL"]
ignore = [".venv", ".tox", "docs", "build"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
]
[tool.pylint.design]
max-args = 10
